# message_bus

./: CMakeLists.txt  CMakeSettings.json  README.md  output.txt
call/: CMakeLists.txt
call/src/: CMakeLists.txt  call.cpp  version_info.rc.in
dir_opt/include/: dir_opt.h
dir_opt/src/: CMakeLists.txt  dir_opt.cpp  version_info.rc.in
inc/: dll_proxy.h
message_bus/include/: message_bus_interface.h
message_bus/src/: CMakeLists.txt  message_bus_interface.cpp  version_info.rc.in
message_bus/test/: CMakeLists.txt  test.cpp  test.hpp
receiver/include/: receiver.h
receiver/src/: CMakeLists.txt  receiver.cpp  version_info.rc.in
sender/: CMakeLists.txt
sender/include/: sender.h
sender/src/: CMakeLists.txt  sender.cpp  version_info.rc.in
